maze.lessons.maze.island.IslandMaze.scala.error
Escaper:3: error: not found: value get
  while(get()>0 && estSurBiscuit()){
        ^